@@ -119,4 +119,52 @@ TEST(WTF_WeakPtr, Dereference)
     weakPtr->bar();
 }
 
+TEST(WTF_WeakPtr, Forget)
+{
+    int dummy = 5;
+    int dummy2 = 7;
+
+    WeakPtrFactory<int> outerFactory(&dummy2);
+    WeakPtr<int> weakPtr1, weakPtr2, weakPtr4;
+    {
+        WeakPtrFactory<int> innerFactory(&dummy);
+        weakPtr1 = innerFactory.createWeakPtr();
+        weakPtr2 = innerFactory.createWeakPtr();
+        EXPECT_EQ(weakPtr1.get(), &dummy);
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        weakPtr1.forget();
+        EXPECT_NULL(weakPtr1.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        weakPtr1.forget();
+        EXPECT_NULL(weakPtr1.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        WeakPtr<int> weakPtr3 = weakPtr2;
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_EQ(weakPtr3.get(), &dummy);
+        weakPtr3.forget();
+        EXPECT_NULL(weakPtr3.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        weakPtr4 = weakPtr2;
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_EQ(weakPtr4.get(), &dummy);
+
+        weakPtr4 = outerFactory.createWeakPtr();
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_EQ(weakPtr4.get(), &dummy2);
+    }
+
+    EXPECT_NULL(weakPtr1.get());
+    EXPECT_NULL(weakPtr2.get());
+    EXPECT_EQ(weakPtr4.get(), &dummy2);
+
+    WeakPtr<int> weakPtr5 = weakPtr4;
+    EXPECT_EQ(weakPtr4.get(), &dummy2);
+    EXPECT_EQ(weakPtr5.get(), &dummy2);
+    weakPtr5.forget();
+    EXPECT_NULL(weakPtr5.get());
+    WeakPtr<int> weakPtr6 = weakPtr5;
+    EXPECT_NULL(weakPtr6.get());
+    EXPECT_EQ(weakPtr5.get(), weakPtr6.get());
+}
+    
 } // namespace TestWebKitAPI
